applications/listmonk/statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: listmonk
spec:
  replicas: 1
  serviceName: listmonk
  template:
    spec:
      containers:
        - command:
            - ./listmonk
            - --idempotent
          image: listmonk/listmonk
          name: listmonk
          ports:
            - containerPort: 9000
              name: http
          securityContext:
            readOnlyRootFilesystem: true
          volumeMounts:
            - mountPath: /listmonk/uploads
              name: uploads
        - args:
            - |
              set -eu

              interval=$POSTGRES_HEALTHCHECK_INTERVAL_SECONDS

              export PGPASSWORD=$LISTMONK_db__password

              alias check="pg_isready \
                --host=$LISTMONK_db__host \
                --username=$LISTMONK_db__user \
                --dbname=$LISTMONK_db__database"

              while sleep $interval; do
                check
              done
          command:
            - sh
            - -c
          image: postgres
          name: postgres
          securityContext:
            readOnlyRootFilesystem: true
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
  volumeClaimTemplates:
    - metadata:
        name: uploads
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
